[package]
name = "bitswap-monitoring-client"
version = "0.6.0"
authors = ["Leo Balduf <leobalduf@gmail.com>", "Simon Jacob <simonjacob@protonmail.com>"]
edition = "2021"

[dependencies]
async-std = "1.10.0"
async-compression = "0.3.15"
ipfs-resolver-common = { path = "../common" }
ipfs_monitoring_plugin_client = { path = "../ipfs-monitoring-plugin-client" }
tokio = { version = "1", features = ["rt", "net", "sync", "rt-multi-thread", "time", "macros", "signal", "fs"] }
log = "0.4.14"
flexi_logger = "0.25.3"
failure = "0.1.8"
futures-util = "0.3.28"
chrono = { version = "0.4.24", features = ["serde"] }
prometheus_exporter = "0.8.4"
# This needs to be matching the version prometheus_exporter uses!
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.17"
clap = "2.33.3"
flate2 = "1.0"
itertools = "0.10.5"

# MaxMind database reader.
maxminddb = "0.23.0"

# Multiaddress parser.
multiaddr = "0.17"

# ISO 3166-1 countries.
celes = "2.4.0"
